{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 126,
  "lineage": "b3161d3c-48f0-f543-6711-170f842f1d60",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "techwebsite_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:677641026485:internet-gateway/igw-0acadc7d37215d06a",
            "id": "igw-0acadc7d37215d06a",
            "owner_id": "677641026485",
            "tags": {
              "Name": "techwebsite"
            },
            "tags_all": {
              "Name": "techwebsite"
            },
            "vpc_id": "vpc-0c380abdd45658f13"
          },
          "dependencies": [
            "aws_vpc.techwebsite_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "techwebsite_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:677641026485:route-table/rtb-0885494a490aa163d",
            "id": "rtb-0885494a490aa163d",
            "owner_id": "677641026485",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0acadc7d37215d06a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "techwebsite"
            },
            "tags_all": {
              "Name": "techwebsite"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c380abdd45658f13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.techwebsite_igw",
            "aws_vpc.techwebsite_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "techwebsite_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032ed4a8d8aa17607",
            "route_table_id": "rtb-0885494a490aa163d",
            "subnet_id": "subnet-0d6262ff3b35e343a"
          },
          "dependencies": [
            "aws_internet_gateway.techwebsite_igw",
            "aws_route_table.techwebsite_rt",
            "aws_subnet.techwebsite_subnet",
            "aws_vpc.techwebsite_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "techwebsite_rta2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f331d9cb6a3f50a",
            "route_table_id": "rtb-0885494a490aa163d",
            "subnet_id": "subnet-02d46b009d67913b0"
          },
          "dependencies": [
            "aws_internet_gateway.techwebsite_igw",
            "aws_route_table.techwebsite_rt",
            "aws_subnet.techwebsite_subnet_2",
            "aws_vpc.techwebsite_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "techwebsite_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:677641026485:security-group/sg-0e22ac8e2336cee24",
            "description": "Allow incoming database traffic",
            "egress": [],
            "id": "sg-0e22ac8e2336cee24",
            "ingress": [
              {
                "cidr_blocks": [
                  "70.130.160.218/32"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "techwebsiteSG",
            "name_prefix": "",
            "owner_id": "677641026485",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "techwebsite"
            },
            "tags_all": {
              "Name": "techwebsite"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c380abdd45658f13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.techwebsite_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "techwebsite_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:677641026485:subnet/subnet-0d6262ff3b35e343a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6262ff3b35e343a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "677641026485",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "techwebsite"
            },
            "tags_all": {
              "Name": "techwebsite"
            },
            "vpc_id": "vpc-0c380abdd45658f13"
          },
          "dependencies": [
            "aws_vpc.techwebsite_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "techwebsite_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:677641026485:subnet/subnet-02d46b009d67913b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d46b009d67913b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "677641026485",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "techwebsite"
            },
            "tags_all": {
              "Name": "techwebsite"
            },
            "vpc_id": "vpc-0c380abdd45658f13"
          },
          "dependencies": [
            "aws_vpc.techwebsite_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "techwebsite_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:677641026485:vpc/vpc-0c380abdd45658f13",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c8a64b76f4e74c14",
            "default_route_table_id": "rtb-0d122bdab012ff4a3",
            "default_security_group_id": "sg-0a7e73f355409f215",
            "dhcp_options_id": "dopt-0b0267bed57240e6f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c380abdd45658f13",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d122bdab012ff4a3",
            "owner_id": "677641026485",
            "tags": {
              "Name": "techwebsite"
            },
            "tags_all": {
              "Name": "techwebsite"
            }
          }
        }
      ]
    }
  ]
}